rust/kcl-lib/tests/ascription_unknown_type/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing ascription_unknown_type.kcl
---
KCL Semantic error

  × semantic: Unknown type: NotARealType
   ╭────
 1 │ z = 10: NotARealType
   ·     ─┬
   ·      ╰── tests/ascription_unknown_type/input.kcl
   ╰────
